[package]
name = "password-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = "0.29.0"
rsa = "0.8.1"
rand = "0.8.5"
cli-table = "0.4.7"
clap = {version="4.2.4", features=["derive"]}
sha2 = "0.10.6"
hex = "0.4.3"